--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
+    "routes": "^2.1.0",
     "sass": "^1.32.8"
   },
   "devDependencies": {
